--- a/index.html
+++ b/index.html
@@ -196,6 +196,12 @@
       .table-wrap table th:first-child,
       .table-wrap table td:first-child {
         border-right: 1px solid var(--border);
+        width: 50%;
+      }
+      .tokens {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
       }
     </style>
   </head>
