--- a/index.html
+++ b/index.html
@@ -276,8 +276,9 @@
                         alt="token"
                         onerror="this.remove()"
                       />
-                      +1 token per 10 correct answers
+                      +1 token per 10
                     </span>
+                    <div class="token-plain">correct answers</div>
                   </div>
                 </td>
               </tr>
