--- a/index.html
+++ b/index.html
@@ -357,6 +357,45 @@
                   </div>
                 </td>
               </tr>
+
+              <tr>
+                <td>
+                  • Refer a friend to download the app, log in, and complete
+                  their first Daily Challenge through the Referral Program.
+                </td>
+                <td>
+                  <div class="tokens">
+                    <span class="token-plain">
+                      <img
+                        src="https://raw.githubusercontent.com/abc-elearning-app/token-info/main/token.png"
+                        alt="token"
+                        onerror="this.remove()"
+                      />
+                      +15 tokens per
+                    </span>
+                    <div class="token-plain">successful referral</div>
+                  </div>
+                </td>
+              </tr>
+
+              <tr>
+                <td>
+                  • Be referred by a friend, then download the app, log in, and
+                  complete your first Daily Challenge. Only rewarded once.
+                </td>
+                <td>
+                  <div class="tokens">
+                    <span class="token-plain">
+                      <img
+                        src="https://raw.githubusercontent.com/abc-elearning-app/token-info/main/token.png"
+                        alt="token"
+                        onerror="this.remove()"
+                      />
+                      +15 tokens
+                    </span>
+                  </div>
+                </td>
+              </tr>
             </tbody>
           </table>
         </div>
@@ -410,7 +449,10 @@
         <ul class="list">
           <li>
             <span class="dot"></span>
-            <span>Maximum token storage: <strong>50 tokens</strong>.</span>
+            <span
+              >Maximum token storage:
+              <strong style="color: #ffb000">50 tokens</strong></span
+            >
           </li>
           <li>
             <span class="dot"></span>
