--- a/index.html
+++ b/index.html
@@ -449,9 +449,8 @@
         <ul class="list">
           <li>
             <span class="dot"></span>
-            <span
-              >Maximum token storage:
-              <strong style="color: #ffb000">50 tokens</strong></span
+            <span style="color: rgba(33, 33, 33, 0.8); background-color: #ffd700"
+              >Maximum token storage: <strong>50 tokens</strong></span
             >
           </li>
           <li>
