--- a/index.html
+++ b/index.html
@@ -98,15 +98,6 @@
         vertical-align: top;
         border-top: 1px solid var(--border);
       }
-      tbody tr:first-child td {
-        border-top: none;
-      }
-      tbody td:first-child {
-        color: var(--text);
-        padding-left: calc(14px + 1.2em);
-        text-indent: -1.2em;
-        text-align: left; /* Ensure text is left-aligned */
-      }
       .tokens {
         display: flex;
         align-items: center;
@@ -247,8 +238,8 @@
             <tbody>
               <tr>
                 <td>
-                  • Complete 1 Core in Study Section for the first time. Each
-                  Core only rewards once.
+                  Complete 1 Core in Study Section for the first time. Each Core
+                  only rewards once.
                 </td>
                 <td>
                   <div class="tokens">
@@ -266,9 +257,8 @@
 
               <tr>
                 <td>
-                  • Get ≥10 correct answers in any Test; every 10 correct
-                  answers = +1 token. Only extra correct answers from retakes
-                  count.
+                  Get ≥10 correct answers in any Test; every 10 correct answers
+                  = +1 token. Only extra correct answers from retakes count.
                 </td>
                 <td>
                   <div class="tokens">
@@ -287,7 +277,7 @@
 
               <tr>
                 <td>
-                  • Complete the Daily Challenge with all answers correct. Only
+                  Complete the Daily Challenge with all answers correct. Only
                   rewarded once per day.
                 </td>
                 <td>
@@ -305,7 +295,7 @@
               </tr>
 
               <tr>
-                <td>• Unlock a badge.</td>
+                <td>Unlock a badge.</td>
                 <td>
                   <div class="tokens">
                     <span class="token-plain">
@@ -322,7 +312,7 @@
 
               <tr>
                 <td>
-                  • Rank in Top 10 on the Weekly Leaderboard.
+                  Rank in Top 10 on the Weekly Leaderboard.
                   <span class="muted">Only rewarded once per week.</span>
                 </td>
                 <td>
@@ -360,8 +350,8 @@
 
               <tr>
                 <td>
-                  • Refer a friend to download the app, log in, and complete
-                  their first Daily Challenge through the Referral Program.
+                  Refer a friend to download the app, log in, and complete their
+                  first Daily Challenge through the Referral Program.
                 </td>
                 <td>
                   <div class="tokens">
@@ -380,7 +370,7 @@
 
               <tr>
                 <td>
-                  • Be referred by a friend, then download the app, log in, and
+                  Be referred by a friend, then download the app, log in, and
                   complete your first Daily Challenge. Only rewarded once.
                 </td>
                 <td>
@@ -449,7 +439,8 @@
         <ul class="list">
           <li>
             <span class="dot"></span>
-            <span style="color: rgba(33, 33, 33, 0.8); background-color: #ffd700"
+            <span
+              style="color: rgba(33, 33, 33, 0.8); background-color: #ffd700"
               >Maximum token storage: <strong>50 tokens</strong></span
             >
           </li>
